apps/tetra/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tetra-staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: tetra-production
