apps/tetra/base/minio-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tetra-minio
spec:
  serviceName: tetra-minio-service
  replicas: 1
  selector:
    matchLabels:
      app: tetra-minio
  template:
    metadata:
      labels:
        app: tetra-minio
    spec:
      containers:
        - name: minio
          image: minio/minio:latest
          command:
            - server
            - /data
            - --console-address
            - ":9001"
          ports:
            - containerPort: 9000
              name: api
            - containerPort: 9001
              name: console
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: minio-data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: minio-data
      spec:
        accessModes: [ReadWriteOnce]
        storageClassName: hcloud-volumes
        resources:
          requests:
            storage: 50Gi
