apps/tetra/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetra-api-service
spec:
  selector:
    app: tetra-api
  ports:
    - port: 8080
      targetPort: 8080
