apps/tetra/base/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetra-minio-service
spec:
  selector:
    app: tetra-minio
  ports:
    - port: 9000
      targetPort: 9000
      name: api
